syntax = "proto3";

package model.v1;

message Character {
  string id = 1;
  string name = 2;
  string thumbnail_path = 3;
  string thumbnail_url = 4;
}
